[gd_scene load_steps=11 format=3 uid="uid://c7j5bvfsvltos"]

[ext_resource type="Script" uid="uid://y4dfkd5quihi" path="res://scripts/gameController.gd" id="1_ye7vx"]
[ext_resource type="Texture2D" uid="uid://y8fg71fr8b7o" path="res://spirtes/Game_Background_Industrial_Haste_Belt.png" id="2_2vgsm"]
[ext_resource type="Texture2D" uid="uid://c65cqdikpve5l" path="res://spirtes/Game_Background_Industrial_Haste.png" id="3_iat15"]
[ext_resource type="Script" uid="uid://kiinvk6erjty" path="res://scripts/toolController.gd" id="4_alea3"]
[ext_resource type="Texture2D" uid="uid://cpjiscg32nlxc" path="res://spirtes/Placeholders/tapePlaceholder.webp" id="5_yi10d"]
[ext_resource type="Texture2D" uid="uid://bkxrr1qqx1pkk" path="res://spirtes/Placeholders/wrenchPlaceholder.png" id="6_275mg"]
[ext_resource type="Texture2D" uid="uid://bvdbvea54eeu1" path="res://spirtes/Placeholders/boltsPlaceholder.jpg" id="7_jsvck"]

[sub_resource type="LabelSettings" id="LabelSettings_i1jb3"]
font_size = 40
outline_size = 11
outline_color = Color(0, 0, 0, 1)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_yxycf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5m38y"]
size = Vector2(0.9979884, 1.0301809)

[node name="GameScreen" type="Node2D"]
script = ExtResource("1_ye7vx")

[node name="Camera" type="Camera2D" parent="."]

[node name="BoxSpawner" type="Node2D" parent="."]
position = Vector2(-753, 64)
scale = Vector2(1156.5, 144)

[node name="ConveyorBeltSprite" type="Sprite2D" parent="."]
z_index = 4
texture = ExtResource("2_2vgsm")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("3_iat15")

[node name="Clock" type="Label" parent="."]
z_index = 8
offset_left = 408.0
offset_top = -312.0
offset_right = 567.0
offset_bottom = -257.0
text = "6:00"
label_settings = SubResource("LabelSettings_i1jb3")
horizontal_alignment = 2

[node name="ClockTimer" type="Timer" parent="Clock"]
autostart = true

[node name="ToolBar" type="Node2D" parent="."]
z_index = 5
script = ExtResource("4_alea3")

[node name="TapeTool" type="Node2D" parent="ToolBar"]

[node name="TapeToolHeldSprite" type="Sprite2D" parent="ToolBar/TapeTool"]
z_index = 1
position = Vector2(-202.75002, 266.75)
scale = Vector2(0.30375004, 0.30375004)
texture = ExtResource("5_yi10d")

[node name="TapeToolToolBar" type="Sprite2D" parent="ToolBar/TapeTool"]
position = Vector2(-201.875, 265.875)
scale = Vector2(124.250015, 124.25002)
texture = SubResource("PlaceholderTexture2D_yxycf")

[node name="Area2D" type="Area2D" parent="ToolBar/TapeTool/TapeToolToolBar"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToolBar/TapeTool/TapeToolToolBar/Area2D"]
position = Vector2(-0.0010056496, -0.015090466)
shape = SubResource("RectangleShape2D_5m38y")

[node name="WrenchTool" type="Node2D" parent="ToolBar"]

[node name="WrenchToolHeldSprite" type="Sprite2D" parent="ToolBar/WrenchTool"]
z_index = 1
position = Vector2(-3, 267)
scale = Vector2(0.33333337, 0.33333337)
texture = ExtResource("6_275mg")

[node name="WrenchToolToolBar" type="Sprite2D" parent="ToolBar/WrenchTool"]
position = Vector2(-1.875, 265.875)
scale = Vector2(124.250015, 124.25002)
texture = SubResource("PlaceholderTexture2D_yxycf")

[node name="Area2D" type="Area2D" parent="ToolBar/WrenchTool/WrenchToolToolBar"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToolBar/WrenchTool/WrenchToolToolBar/Area2D"]
position = Vector2(-0.0010056496, -0.015090466)
shape = SubResource("RectangleShape2D_5m38y")

[node name="BoltsTool" type="Node2D" parent="ToolBar"]

[node name="BoltsToolHeldSprite" type="Sprite2D" parent="ToolBar/BoltsTool"]
z_index = 1
position = Vector2(218.95, 265.5)
scale = Vector2(0.2997462, 0.3305556)
texture = ExtResource("7_jsvck")

[node name="BoltsToolToolBar" type="Sprite2D" parent="ToolBar/BoltsTool"]
position = Vector2(221.125, 265.875)
scale = Vector2(124.250015, 124.25002)
texture = SubResource("PlaceholderTexture2D_yxycf")

[node name="Area2D" type="Area2D" parent="ToolBar/BoltsTool/BoltsToolToolBar"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToolBar/BoltsTool/BoltsToolToolBar/Area2D"]
position = Vector2(-0.0010056496, -0.015090466)
shape = SubResource("RectangleShape2D_5m38y")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Clock/ClockTimer" to="." method="_second_passed"]
[connection signal="input_event" from="ToolBar/TapeTool/TapeToolToolBar/Area2D" to="ToolBar" method="_on_tool_clicked" binds= [1]]
[connection signal="input_event" from="ToolBar/WrenchTool/WrenchToolToolBar/Area2D" to="ToolBar" method="_on_tool_clicked" binds= [2]]
[connection signal="input_event" from="ToolBar/BoltsTool/BoltsToolToolBar/Area2D" to="ToolBar" method="_on_tool_clicked" binds= [3]]
